Fix accidental use of Java 11 features/libraries in code